v0.0.1/modules/schema/pages/class/SwitchAction.adoc
= `SwitchAction`
:toclevels: 4


+++Action on switch as a switching step.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:SwitchAction`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/SwitchingAction.adoc[`SwitchingAction`]
*** *`SwitchAction`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
SwitchAction {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Switch {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Outage {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



SwitchingPlan {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Operator {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Crew {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



SwitchingEvent {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



SwitchingStep {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}




SwitchAction -> Switch: OperatedSwitch


SwitchAction -> Outage: PlannedOutage


SwitchAction -> SwitchingPlan: SwitchingPlan


SwitchAction -> Operator: Operator


SwitchAction -> Crew: Crew


SwitchAction -> SwitchingEvent: SwitchingEvent


SwitchAction -> SwitchingStep: SwitchingStep


SwitchAction -> DiagramObject: DiagramObjects


SwitchAction -> InstanceSet: InstanceSet


SwitchAction -> Name: Names


SwitchAction -> ChangeSetMember: PropertiesCIMDataObject


SwitchAction -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<OperatedSwitch,`OperatedSwitch`>>
| 0..1
| xref::class/Switch.adoc[`Switch`]
| +++Switch that is the object of this switch action.+++

| <<PlannedOutage,`PlannedOutage`>>
| 0..1
| xref::class/Outage.adoc[`Outage`]
| +++Planned outage for whose scope this switch action applies.+++

| <<kind,`kind`>>
| 0..1
| xref::enumeration/SwitchActionKind.adoc[`SwitchActionKind`]
| +++Switching action to perform.+++

| <<Operator,`Operator`>>
| 0..1
| xref::class/Operator.adoc[`Operator`]
| +++Operator responsible for this switching step.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<SwitchingEvent,`SwitchingEvent`>>
| 0..1
| xref::class/SwitchingEvent.adoc[`SwitchingEvent`]
| +++The switching event that the switching action is performed on+++

| <<SwitchingPlan,`SwitchingPlan`>>
| 0..1
| xref::class/SwitchingPlan.adoc[`SwitchingPlan`]
| +++The switching plan that is associated with the switching actions.+++

| <<SwitchingStep,`SwitchingStep`>>
| 0..1
| xref::class/SwitchingStep.adoc[`SwitchingStep`]
| +++The switching step that is associated to the switching action.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<executedDateTime,`executedDateTime`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Actual date and time of this switching step.+++

| <<issuedDateTime,`issuedDateTime`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Date and time when the crew was given the instruction to execute the action; not applicable if the action is performed by operator remote control.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<phases,`phases`>>
| 0..1
| xref::enumeration/PhaseCode.adoc[`PhaseCode`]
| +++Phases of the Switching Action+++

| <<plannedDateTime,`plannedDateTime`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Planned date and time of this switching step.+++

| <<Crew,`Crew`>>
| 0..*
| xref::class/Crew.adoc[`Crew`]
| +++The crew that is assigned to the switching action.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Crew]
=== `Crew`
+++The crew that is assigned to the switching action.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SwitchingAction.Crew`
| Cardinality
| 0..*
| Type
| xref::class/Crew.adoc[`Crew`]

| Inherited from
| xref::class/SwitchingAction.adoc[`SwitchingAction`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#executedDateTime]
=== `executedDateTime`
+++Actual date and time of this switching step.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SwitchingAction.executedDateTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/SwitchingAction.adoc[`SwitchingAction`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#issuedDateTime]
=== `issuedDateTime`
+++Date and time when the crew was given the instruction to execute the action; not applicable if the action is performed by operator remote control.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SwitchingAction.issuedDateTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/SwitchingAction.adoc[`SwitchingAction`]


|===

//[discrete]
[#kind]
=== `kind`
+++Switching action to perform.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SwitchAction.kind`
| Cardinality
| 0..1
| Type
| xref::enumeration/SwitchActionKind.adoc[`SwitchActionKind`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#OperatedSwitch]
=== `OperatedSwitch`
+++Switch that is the object of this switch action.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SwitchAction.OperatedSwitch`
| Cardinality
| 0..1
| Type
| xref::class/Switch.adoc[`Switch`]


|===

//[discrete]
[#Operator]
=== `Operator`
+++Operator responsible for this switching step.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SwitchingAction.Operator`
| Cardinality
| 0..1
| Type
| xref::class/Operator.adoc[`Operator`]

| Inherited from
| xref::class/SwitchingAction.adoc[`SwitchingAction`]


|===

//[discrete]
[#phases]
=== `phases`
+++Phases of the Switching Action+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SwitchingAction.phases`
| Cardinality
| 0..1
| Type
| xref::enumeration/PhaseCode.adoc[`PhaseCode`]

| Inherited from
| xref::class/SwitchingAction.adoc[`SwitchingAction`]


|===

//[discrete]
[#plannedDateTime]
=== `plannedDateTime`
+++Planned date and time of this switching step.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SwitchingAction.plannedDateTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/SwitchingAction.adoc[`SwitchingAction`]


|===

//[discrete]
[#PlannedOutage]
=== `PlannedOutage`
+++Planned outage for whose scope this switch action applies.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SwitchAction.PlannedOutage`
| Cardinality
| 0..1
| Type
| xref::class/Outage.adoc[`Outage`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#SwitchingEvent]
=== `SwitchingEvent`
+++The switching event that the switching action is performed on+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SwitchingAction.SwitchingEvent`
| Cardinality
| 0..1
| Type
| xref::class/SwitchingEvent.adoc[`SwitchingEvent`]

| Inherited from
| xref::class/SwitchingAction.adoc[`SwitchingAction`]


|===

//[discrete]
[#SwitchingPlan]
=== `SwitchingPlan`
+++The switching plan that is associated with the switching actions.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SwitchingAction.SwitchingPlan`
| Cardinality
| 0..1
| Type
| xref::class/SwitchingPlan.adoc[`SwitchingPlan`]

| Inherited from
| xref::class/SwitchingAction.adoc[`SwitchingAction`]


|===

//[discrete]
[#SwitchingStep]
=== `SwitchingStep`
+++The switching step that is associated to the switching action.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:SwitchingAction.SwitchingStep`
| Cardinality
| 0..1
| Type
| xref::class/SwitchingStep.adoc[`SwitchingStep`]

| Inherited from
| xref::class/SwitchingAction.adoc[`SwitchingAction`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===


